5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1593_2043.log
== TEST (2019-03-26 10:31:44) 
-- CODE:
a = float(input("Digite um valor: "))
b = float(input("Digite um valor: "))
c = float(input("Digite um valor: "))
d = float(input("Digite um valor: "))

n1 = a * 1
n2 = b * 2
n3 = c * 3
n4 = d * 4

x = (n1 + n2 + n3 + n4) / 10

printround(x, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    printround(x, 2)
NameError: name 'printround' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:09) 
-- CODE:
a = float(input("Digite um valor: "))
b = float(input("Digite um valor: "))
c = float(input("Digite um valor: "))
d = float(input("Digite um valor: "))

n1 = a * 1
n2 = b * 2
n3 = c * 3
n4 = d * 4

x = (n1 + n2 + n3 + n4) / 10

printround(x, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    printround(x, 2)
NameError: name 'printround' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:25) 
-- CODE:
a = float(input("Digite um valor: "))
b = float(input("Digite um valor: "))
c = float(input("Digite um valor: "))
d = float(input("Digite um valor: "))

n1 = a * 1
n2 = b * 2
n3 = c * 3
n4 = d * 4

x = (n1 + n2 + n3 + n4) / 10

print(round(x, 2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:32:37) 
-- CODE:
a = float(input("Digite um valor: "))
b = float(input("Digite um valor: "))
c = float(input("Digite um valor: "))
d = float(input("Digite um valor: "))

n1 = a * 1
n2 = b * 2
n3 = c * 3
n4 = d * 4

x = (n1 + n2 + n3 + n4) / 10

print(round(x, 2))
-- EXECUTION TIME:
0.183521
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:29:04) 
-- CODE:
a = float(input("Digite um valor: "))
b = float(input("Digite um valor: "))
c = float(input("Digite um valor: "))
d = float(input("Digite um valor: "))

n1 = a * 1
n2 = b * 2
n3 = c * 3
n4 = d * 4

x = (n1 + n2 + n3 + n4) / 10

print(round(x, 2))
-- EXECUTION TIME:
0.189922
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
